# glados

./: .gitignore  README.md  agent_state.sqlite-shm  agent_state.sqlite-wal  chainlit.md  main.py  notes.md  pyproject.toml  run.bat
src/: app.py
src/capabilities/finance/: agent.py  tools.py
src/capabilities/home_control/: agent.py  tools.py
src/capabilities/research/: agent.py  tools.py
src/capabilities/scheduler/: agent.py  tools.py
src/capabilities/system_admin/: agent.py  tools.py
src/core/: config.py  database.py  iot.py  llm.py  middleware.py  persistence.py  vector.py  voice.py
src/orchestrator/: graph.py  state.py
src/scripts/: delete_doc_from_qdrant.py  ingest_amazon.py  ingest_paperless.py  load_finance.py  update_db.py  visualize_graph.py
src/utils/: loaders.py  parsing.py
tests/integration/: test_ha_connection.py  test_ha_control.py  test_qdrant_search.py
