[project]
name = "glados"
version = "0.2.0" # Bump version
description = "Unraid Assistant (LangChain v1 Architecture)"
authors = [
    {name = "Joseph Chillemi", email = "jchillemi87@gmail.com"},
]
dependencies = [
    "langchain>=0.3.0",          # The new standard
    "langchain-classic",         # For legacy support if needed
    "langchain-ollama>=0.2.0", 
    "langchain-qdrant>=0.1.0",
    "langgraph>=0.2.0",          # v1 stability release
    "pydantic-settings>=2.0.0",
    "qdrant-client",
    "sqlalchemy>=2.0.45",
    "pandas>=2.3.3",
    "playwright",
    "beautifulsoup4"
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

# --- THE FIX FOR IMPORTS ---
# This tells PDM: "The code lives in the 'src' folder."
# This allows 'from src.core.llm import get_llm' to work.
[tool.pdm.build]
includes = ["src"]